
ACLOCAL_AMFLAGS = -I m4

SUBDIRS = libsrc src doc tests

EXTRA_DIST = INSTALL.unix INSTALL.win README.md MKDIST ChangeLog LICENSE Makefile.nmake Makefile Build.config

distclean-local:
	rm -fr configure Makefile.in build-aux config.h.in autom4te.cache \
	aclocal.m4 m4/* *~ AMP.* PHASE.* *.gz *.zip env

