SUBDIRS = mxml

lib_LTLIBRARIES = libevalresp_log.la

libevalresp_log_la_SOURCES = evalresp_log/log.c evalresp_log/helpers.c\
							 evalresp_log/examples/to_syslog.c\
							 evalresp_log/examples/to_file.c

nobase_include_HEADERS = evalresp_log/log.h evalresp_log/examples/to_syslog.h\
						 evalresp_log/examples/to_file.h
