EXTRA_DIST = build-evalresp.sh clean-extended-test-dirs.sh  install-robot.sh  run-c-tests.sh \
build-extended-robot-tests.sh clean-test-dirs.sh run-robot-tests.sh \
clean-base-test-dirs.sh collect-extended-targets.sh  README.md \
build-evalresp.bat build-extended-robot-tests.bat \
install-robot.bat run-robot-tests.bat Jenkinsfile

